--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href=" "> WebStudio</a>
+        <a href=" "> <Web class="accent">Web</span><span class="studio">studio</span></a>
         <ul>
           <li><a href="">Студія </a></li>
           <li><a href="">Портфоліо </a></li>
