--- a/index.html
+++ b/index.html
@@ -5,53 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modul01</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <a href=" "> <Web class="accent">Web</span><span class="studio">studio</span></a>
+        <a class="webstudio" href="index.html"
+          ><span class="web">Web</span><span class="studio">studio</span></a
+        >
         <ul>
-          <li><a href="">Студія </a></li>
-          <li><a href="">Портфоліо </a></li>
-          <li><a href="">Контакти </a></li>
+          <li><a class="nav" href="index.html">Студія </a></li>
+          <li><a class="nav" href="portfolio.html">Портфоліо </a></li>
+          <li><a class="nav" href="">Контакти </a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
       <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
+        <button class="button-hero" type="button">Замовити послугу</button>
       </section>
       <section>
         <h2>description</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="description-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="description-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="description-title">ПЛАНУВАННЯ</h3>
+            <p class="description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="description-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="description">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -59,7 +73,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2 class="subtitle">Чим ми займаємося</h2>
         <ul>
           <li><img src="./images/box_1.jpg" alt="tablet" width="370" /></li>
           <li><img src="./images/box_2.jpg" alt="laptop" width="370" /></li>
@@ -69,41 +83,45 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="subtitle">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/img_igor.jpg" alt="Igor" width="270" />
 
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Ігор Дем'яненко</h3>
+            <p class="prof">Product Designer</p>
           </li>
           <li>
             <img src="./images/img_olga.jpg" alt="Olga" width="270" />
 
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Ольга Рєпіна</h3>
+            <p class="prof">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img_mykola.jpg" alt="Mykola" width="270" />
 
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="name">Микола Тарасов</h3>
+            <p class="prof">Marketing</p>
           </li>
           <li>
             <img src="./images/img_mychailo.jpg" alt="Mychailo" width="270" />
 
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Михайло Єрмаков</h3>
+            <p class="prof">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href=" "> WebStudio</a>
-      <address>
+      <a class="webstudio" href="index.html"
+        ><span class="web">Web</span><span class="studio">studio</span></a
+      >
+      <address class="adress">
         м. Київ, пр-т Лесі Українки, 26
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="contact" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
