--- a/portfolio.html
+++ b/portfolio.html
@@ -3,30 +3,184 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>galery</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <a href=" "> WebStudio</a>
+        <a class="webstudio" href="index.html"
+          ><span class="web">Web</span><span class="studio">studio</span></a
+        >
         <ul>
-          <li><a href="">Студія </a></li>
-          <li><a href="">Портфоліо </a></li>
-          <li><a href="">Контакти </a></li>
+          <li><a class="nav" href="index.html">Студія </a></li>
+          <li><a class="nav" href="portfolio.html">Портфоліо </a></li>
+          <li><a class="nav" href="">Контакти </a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        <li><button type="button" class="radio-button">Усі</button></li>
+        <li><button type="button" class="radio-button">Веб-сайти</button></li>
+        <li><button type="button" class="radio-button">Додатки</button></li>
+        <li><button type="button" class="radio-button">Дизайн</button></li>
+        <li><button type="button" class="radio-button">Маркетинг</button></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./images/tecnokryak.jpg" alt="web" width="370" />
+            <h2 class="signature">Технокряк</h2>
+            <p class="prof">Веб-сайт</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/poster.jpg" alt="poster" width="370" />
+            <h2 class="signature">Постер New Orlean vs Golden Star</h2>
+            <p class="prof">Дизайн</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/seafood.jpg" alt="seafood" width="370" />
+            <h2 class="signature">Ресторан Seafood</h2>
+            <p class="prof">Додаток</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/headphones.jpg" alt="headphone" width="370" />
+            <h2 class="signature">Проєкт Prime</h2>
+            <p class="prof">Маркетинг</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/boxes.jpg" alt="boxes" width="370" />
+            <h2 class="signature">Проєкт Boxes</h2>
+            <p class="prof">Додаток</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/web.jpg" alt="web-site" width="370" />
+            <h2 class="signature">Inspiration has no Borders</h2>
+            <p class="prof">Дизайн</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/books.jpg" alt="book" width="370" />
+            <h2 class="signature">Видання Limited Edition</h2>
+            <p class="prof">Дизайн</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/label.jpg" alt="label" width="370" />
+            <h2 class="signature">Проєкт LAB</h2>
+            <p class="prof">Маркетинг</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distinctio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+
+        <li>
+          <a href="">
+            <img src="./images/laptop.jpg" alt="laptop" width="370" />
+            <h2 class="signature">Growing Business</h2>
+            <p class="prof">Додаток</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              suscipit saepe aliquid minus, sit quae nesciunt distictio facere
+              quos dolorem accusamus, eaque accusantium vitae rerum perferendis
+              debitis. Ducimus, nemo minus.
+            </p>
+          </a>
+        </li>
+      </ul>
+    </main>
     <footer>
-      <a href=" "> WebStudio</a>
-      <address>
+      <a class="webstudio" href="index.html "
+        ><span class="web">Web</span><span class="studio">studio</span></a
+      >
+      <address class="adress">
         м. Київ, пр-т Лесі Українки, 26
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="contact" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
