--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header>
       <nav>
         <a class="webstudio" href="index.html"
-          ><span class="web">Web</span><span class="studio">studio</span></a
+          ><span class="web">Web</span><span class="studio">Studio</span></a
         >
         <ul>
-          <li><a class="nav" href="index.html">Студія </a></li>
+          <li><a class="nav-index" href="index.html">Студія </a></li>
           <li><a class="nav" href="portfolio.html">Портфоліо </a></li>
           <li><a class="nav" href="">Контакти </a></li>
         </ul>
@@ -36,7 +36,7 @@
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
         <button class="button-hero" type="button">Замовити послугу</button>
       </section>
@@ -82,8 +82,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2 class="subtitle">Наша команда</h2>
+      <section class="comand">
+        <h2 class="comand">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/img_igor.jpg" alt="Igor" width="270" />
@@ -112,16 +112,17 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="webstudio" href="index.html"
-        ><span class="web">Web</span><span class="studio">studio</span></a
+    <footer class="footer">
+      <a class="webstudio" href="index.html "
+        ><span class="web">Web</span
+        ><span class="studio-footer">Studio</span></a
       >
       <address class="adress">
         м. Київ, пр-т Лесі Українки, 26
-        <a class="contact" href="mailto:info@devstudio.com"
+        <a class="contact-footer" href="mailto:info@devstudio.com"
           >info@devstudio.com</a
         >
-        <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="contact-footer" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
